Moved certs to subdir

--- a/test.html
+++ b/test.html
@@ -11,16 +11,18 @@
         xmlns="http://www.cps.lv/xml/ns/cpsxml">
   <header xmlns="">
     <responsetype>direct</responsetype>
-    <user>test_pasta_sign</user>
+    <user>pasta_test_3d</user>
     <type>sendForAuth</type>
     <transType>DB</transType>
-    <digiSignature>f91i+jpWIzKCh0JpvE7PGSK7Es3maGm4lyDUUFw7FRAY6KvpnTyk9H65wjo9
-imynuB2XGPwkzzP89mQuCU1L/mPLsR1N0ynphCVEmINaMxSPuHHcslMni3v3
-CH3K+T7fc0Ypkhvj1RbI56Ni02/0yxS1jXBgziKm7kSa0qQKnQk=
+    <digiSignature>NP+o4wK17G3tqcTF5K2vfBjXQ4RpCLEYPoK9I99/9GPQO95fD0Xp+DueUV4c
+AtgNQmQg4C2BTw0vh1fme8PQanaGF50WJOTdgXdU5ygRxkjja4EyA9cDe1cq
+Ex7iqtSazv2FZXu/6RfVgwcoy4SRuNuQrsDqo6/7isJ/BpgppTI=
 </digiSignature>
+    <callbackUrl>www.google.lv</callbackUrl>
+    <redirectUrl>http://www.google.lv</redirectUrl>
   </header>
   <request xmlns="">
-    <orderNumber>1422019057</orderNumber>
+    <orderNumber>1422028510</orderNumber>
     <cardholder>
       <firstName>Test</firstName>
       <lastName>User</lastName>
@@ -32,9 +34,9 @@ CH3K+T7fc0Ypkhvj1RbI56Ni02/0yxS1jXBgziKm7kSa0qQKnQk=
       <ip>123.124.125.226</ip>
     </cardholder>
     <card>
-      <cardNumber>4012001037167778</cardNumber>
-      <expires>06/18</expires>
-      <cvv>999</cvv>
+      <cardNumber>4314229999999913</cardNumber>
+      <expires>01/18</expires>
+      <cvv>123</cvv>
     </card>
     <amount>
       <value>100</value>
