--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@
 AtgNQmQg4C2BTw0vh1fme8PQanaGF50WJOTdgXdU5ygRxkjja4EyA9cDe1cq
 Ex7iqtSazv2FZXu/6RfVgwcoy4SRuNuQrsDqo6/7isJ/BpgppTI=
 </digiSignature>
-    <callbackUrl>www.google.lv</callbackUrl>
+    <callbackUrl>www.google.com</callbackUrl>
     <redirectUrl>http://www.google.lv</redirectUrl>
   </header>
   <request xmlns="">
